# wxWidgetsProject

./: .gitignore  CMakeLists.txt  main.cpp
src/: MyApp.cpp  MyApp.h  MyFrame.cpp  MyFrame.h  main.cpp
